RESOLVED FIXED199659
AX: VoiceOver ignored role="presentation" on <table> HTML elements
https://bugs.webkit.org/show_bug.cgi?id=199659
Summary AX: VoiceOver ignored role="presentation" on <table> HTML elements
chris fleizach
Reported 2019-07-09 23:03:05 PDT
VoiceOver ignored role="presentation" for HTML table elements. 1. View the following markup in Safari with VoiceOver. <button>hello</button> <table role="presentation"> <tbody role="presentation"> <tr role="presentation"> <td role="presentation">Some text</td> <td role="presentation">Paragraph</td> </TR> </TBODY> </table> 2. Navigate to the text node named "some text" 3. VoiceOver announces "Table start". It should not do this because role="presentation" means that assistive technologies should ignore the native semantics of the element. This is a simplified example from https://www.w3.org/TR/2017/WD-wai-aria-practices-1.1-20170628/examples/presentation/PresentationRoleExamples.html the reason why <table role="presentation"> is used here instead of a simple <div> is because of support for really old browsers with limited CSS capabilities. Hence, <TABLE> elements are used for styling. This is a regression since IOS 11.0. Can be reproduced on up to IOS 12.3.1. <rdar://problem/52845022>
Attachments
patch (4.40 KB, patch)
2019-07-10 00:50 PDT, chris fleizach
ews-watchlist: commit-queue-
Archive of layout-test-results from ews123 for ios-simulator-wk2 (2.67 MB, application/zip)
2019-07-10 02:47 PDT, EWS Watchlist
no flags
patch (4.49 KB, patch)
2019-07-10 10:51 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2019-07-10 00:50:38 PDT
EWS Watchlist
Comment 2 2019-07-10 02:47:41 PDT
Comment on attachment 373826 [details] patch Attachment 373826 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12706257 New failing tests: accessibility/ios-simulator/tables-lists.html
EWS Watchlist
Comment 3 2019-07-10 02:47:43 PDT
Created attachment 373829 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.5
chris fleizach
Comment 4 2019-07-10 10:51:25 PDT
WebKit Commit Bot
Comment 5 2019-07-10 15:42:28 PDT
Comment on attachment 373849 [details] patch Clearing flags on attachment: 373849 Committed r247330: <https://trac.webkit.org/changeset/247330>
WebKit Commit Bot
Comment 6 2019-07-10 15:42:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.