AX: VoiceOver ignored role="presentation" on <table> HTML elements https://bugs.webkit.org/show_bug.cgi?id=199659

Reviewed by Zalan Bujtas.

Source/WebCore:

Only include a table ancestor if it's a table we care about for accessibility.

Modified Test: accessibility/ios-simulator/tables-lists.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityTableAncestor]):

LayoutTests:

* accessibility/ios-simulator/tables-lists-expected.txt:
* accessibility/ios-simulator/tables-lists.html:


Canonical link: https://commits.webkit.org/213569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247330 268f45cc-cd09-0410-ab3c-d52691b4dbfc